--- a/src/Components/FrontendUtils/frontEndUtils.scss
+++ b/src/Components/FrontendUtils/frontEndUtils.scss
@@ -11,3 +11,21 @@
 		color: azure !important;
 	}
 }
+
+// Messages
+
+.messages {
+	height: 440px;
+	overflow-y: scroll;
+	
+}
+
+// MessagesForm
+.message__form {
+	position: fixed !important;
+	bottom: 1em;
+	margin-left: 320px !important;
+	left: 0;
+	right: 1rem;
+	z-index: 200;
+}
