--- a/src/Components/FrontendUtils/frontEndUtils.scss
+++ b/src/Components/FrontendUtils/frontEndUtils.scss
@@ -15,9 +15,9 @@
 // Messages
 
 .messages {
-	height: 440px;
+	height: 75%;
 	overflow-y: scroll;
-	
+	border-bottom: 2px solid #00B5AD !important;
 }
 
 // MessagesForm
@@ -28,4 +28,11 @@
 	left: 0;
 	right: 1rem;
 	z-index: 200;
+}
+
+// Message.js
+.message__self {
+	border-left:  2px solid #e07a5f !important;
+	padding-left: 8px;
+	
 }
