Added Image uploading, fixes UI bug where messageForm were moving with respect to images

--- a/src/Components/FrontendUtils/frontEndUtils.scss
+++ b/src/Components/FrontendUtils/frontEndUtils.scss
@@ -1,3 +1,5 @@
+
+
 .userpanel {
 	.userpanel-menu {
 		color: azure !important;
@@ -15,19 +17,16 @@
 // Messages
 
 .messages {
-	height: 76%;
+	height:  730px;
 	overflow-y: scroll;
-	border-bottom: 2px solid #2a9d8f !important;
-	border-left: 2px solid #2a9d8f !important;
+	border-bottom: 2px solid #20201f !important;
+	border-left: 2px solid #20201f !important;
 
-	border-radius: 1rem !important;
 }
 
 // MessagesForm
 .message__form {
-	box-shadow: 3px -9px 17px 0px rgba(0, 0, 0, 0.75);
-	-webkit-box-shadow: 3px -9px 17px 0px rgba(0, 0, 0, 0.75);
-	-moz-box-shadow: 3px -9px 17px 0px rgba(0, 0, 0, 0.75);
+
 	position: fixed !important;
 	margin-left: 320px !important;
 	left: 0;
@@ -39,4 +38,32 @@
 .message__self {
 	border-left: 2px solid #e07a5f !important;
 	padding-left: 8px;
+}
+
+.modal-send__button {
+	color: #2a9d8f !important;
+	background-color: transparent !important;
+	border: 2px solid #2a9d8f !important;
+	border-radius: 5px !important;
+
+	&:hover {
+		background-color: #2a9d8f !important;
+		color: white !important;
+	}
+}
+
+.modal-cancel__button {
+	color: #e07a5f !important;
+	background-color: transparent !important;
+	border: 2px solid #e07a5f !important;
+	border-radius: 5px !important;
+
+	&:hover {
+		background-color: #e07a5f !important;
+		color: white !important;
+	}
+}
+
+.message__image {
+	padding: 1em;
 }
